--- a/src/style.css
+++ b/src/style.css
@@ -1,30 +1,103 @@
 /*STYLESHEET FOR WEBPAGE*/
-
-	h1{
-		font-family: 'Bree Serif', serif;
+	#title{
+		font-family: 'Anton', sans-serif;
+		font-size: 50px;
+		margin-top: -20%;
+		text-align: center;
 	}
-	body{
+
+	#subtitle{
+		text-align: center;
+		font-size: 20px;
+		margin-top: 3%;
 		font-family: 'Lato', sans-serif;
 	}
+
+	h2{
+		font-size: 22px;
+		font-family: 'Raleway', sans-serif;
+		text-align: center;
+	}
+
+	.text{
+		text-align: left;
+		margin-left: 25%;
+		margin-right: 25%;
+		font-family: 'Lato', sans-serif;
+	}
+
 	img{
 	  width: 150px;
 	  height: 150px;
 	}
-	.tooltip{
-		margin-left: 900px;
-		margin-top: -28%;
-		position: absolute;
-		border-radius: 5px;
-		border-width: 1px;
-		padding: 15px;
-		width: 400px;
-		height: 300px;
+
+	.cover {
+		width: 100%;
+		height: 100%;
+		align-items: center;
+	}
+
+	.node_image{
+		border-radius: 50%;
+		border-color: black;
+		height: 40px;
+		width: 40px;
+		clip-path: circle(20px at center);
+		stroke-width: 1px;
+	}
+
+	.axis-x{
+		stroke-dasharray: 1;
+		color: grey;
+	}
+	.chart, .selection{
+		margin:2%;
+		text-align: center;
+	}
+
+	.artistBubble-container{
+		text-align: left;
+		float: left;
+	}
+	
+	.tooltip-container, .x-title{
+		text-align: left;
+		height: 550px;
+		margin-top: 10%;
+		color: #696969;
+		/*stroke-width:5px;*/
+		font-family: 'Lato',sans-serif;
 		font-size: 14px;
-		font-weight: bold;
+
 	}
-	.xAxis path{
-		stroke: grey;
+	.tooltip_bubble{
+		text-align: center;
 	}
-	.xAxis tick{
-		
+	.feature-container{
+		text-align: left;
+		margin-left: 5%;
+		float: left;
 	}
+	.tooltip-feature{
+		width: 350px;
+		height: 500px;
+		margin-top: 2%;
+		right: 40px;
+		/*border-style: solid;*/
+		/*border-color: black;*/
+		position: absolute;
+		/*background-color: aqua;*/
+	}
+	.feature-defi{
+		/*background-color: red;*/
+		text-align: left;
+		margin-top: 1%;
+		margin-left: 25%;
+		margin-right: 25%;
+	}
+	.track{
+		font-family: 'Raleway', sans-serif;
+		font-size: 20px;
+		font-weight: 900;
+	}
+
