--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,11 @@
 /*STYLESHEET FOR WEBPAGE*/
 	#title{
 		font-family: 'Anton', sans-serif;
-		font-size: 50px;
-		margin-top: -20%;
+		font-size: 60px;
+		margin-top: -31%;
 		text-align: center;
+		color: white;
+		text-shadow: -1px 0 #9E3B71, 0 1px #9E3B71, 0px 0 #9E3B71, 0 -1px #9E3B71
 	}
 
 	#subtitle{
@@ -15,7 +17,7 @@
 
 	h2{
 		font-size: 22px;
-		font-family: 'Raleway', sans-serif;
+		font-family: 'Lato', sans-serif;
 		text-align: center;
 	}
 
@@ -26,9 +28,15 @@
 		font-family: 'Lato', sans-serif;
 	}
 
+	p{
+		font-family: 'Lato', sans-serif;
+		text-align: left;
+		font-size: 16px;
+	}
+
 	img{
-	  width: 150px;
-	  height: 150px;
+	  	width: 150px;
+	  	height: 150px;
 	}
 
 	.cover {
@@ -37,42 +45,94 @@
 		align-items: center;
 	}
 
-	.node_image{
-		border-radius: 50%;
-		border-color: black;
-		height: 40px;
-		width: 40px;
-		clip-path: circle(20px at center);
-		stroke-width: 1px;
+	.chart{
+		/*margin: 2%;*/
+		text-align: center;
 	}
 
-	.axis-x{
-		stroke-dasharray: 1;
-		color: grey;
-	}
-	.chart, .selection{
-		margin:2%;
+	.selection, .btn-group{
+		margin-left: 25%;
 		text-align: center;
+	}
+
+	.ranking-container{
+		margin-left: 10%;
+		/*border-color: black;*/
 	}
 
 	.artistBubble-container{
 		text-align: left;
 		float: left;
+		margin-top: -2%;
 	}
 	
 	.tooltip-container, .x-title{
 		text-align: left;
 		height: 550px;
-		margin-top: 10%;
+		margin-top: 5%;
 		color: #696969;
 		/*stroke-width:5px;*/
 		font-family: 'Lato',sans-serif;
 		font-size: 14px;
-
 	}
-	.tooltip_bubble{
+
+	.tooltip{
+		position: absolute;
+		/*border-radius: 5px;*/
+		width: 250px;
+		height: 150px;
+		padding: 10px;
+		margin-right: 1%;
+		background-color: lightyellow;
 		text-align: center;
 	}
+
+	.tooltip1{
+		position: absolute;
+		/*width: 100px;*/
+		background-color: lightsteelblue;
+		border-radius: 8px;
+		text-align: center;
+		pointer-events: none;
+		padding: 2px;
+
+	}
+
+	.year{
+		position: absolute;
+		display: inline-block;
+		/*border-radius: 5px;*/
+		margin-top: -1%;
+		margin-left: -20%;
+		padding: 10px;
+		width: 50px;
+		height: 50px;
+		/*background-color: red;*/
+	}
+	.artistBubble-img{
+		float:left;
+		/*background-color: red;*/
+		margin-left: 30%;
+		margin-top: 1%;
+		width: 200px;
+		height: 200px;
+	}
+
+	.rounded{
+		width: 100%;
+		height: 100%;
+	}
+
+	.artistBubble-tooltip{
+		text-align: right;
+		/*background-color: yellow;*/
+		margin-left: 45%;
+		margin-top: 1%;
+		font-family: 'Lato',sans-serif;
+		width: 600px;
+		height: 250px;
+	}
+
 	.feature-container{
 		text-align: left;
 		margin-left: 5%;
@@ -81,22 +141,18 @@
 	.tooltip-feature{
 		width: 350px;
 		height: 500px;
-		margin-top: 2%;
 		right: 40px;
-		/*border-style: solid;*/
-		/*border-color: black;*/
+		margin-top: 2%;
 		position: absolute;
-		/*background-color: aqua;*/
 	}
 	.feature-defi{
-		/*background-color: red;*/
 		text-align: left;
 		margin-top: 1%;
 		margin-left: 25%;
 		margin-right: 25%;
 	}
 	.track{
-		font-family: 'Raleway', sans-serif;
+		font-family: 'Lato', sans-serif;
 		font-size: 20px;
 		font-weight: 900;
 	}
